updates with setting background div of menu position to be fixed as i noticed that when the menu was down you could still scroll and see the page behind

--- a/app/components/menu.module.css
+++ b/app/components/menu.module.css
@@ -37,9 +37,10 @@
 .background {
   width: 100vw;
   height: 100vh;
+
   background-color: rgb(0, 0, 0);
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
@@ -61,7 +62,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 3rem;
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -69,7 +70,8 @@
 }
 
 .menubtn:hover {
-  background-color: #ff4b91;
+  color: #ff4b91;
+  font-weight: 600;
 }
 
 .socials {
@@ -95,6 +97,7 @@
 
 .iconlink:hover {
   background-color: #ff4b91;
+
   /* -webkit-filter: grayscale(100%); */
 }
 
@@ -104,5 +107,5 @@
 }
 
 .link:hover {
-  background-color: #ff4b91;
+  color: #ff4b91;
 }
